# internal/routers/user/user.router.go
@@ -2,6 +2,7 @@ package user
 
 import (
 	"go-ecommerce-backend-api/m/v2/internal/controller/account"
+	middleware "go-ecommerce-backend-api/m/v2/internal/middlewares"
 
 	"github.com/gin-gonic/gin"
 )
@@ -21,10 +22,12 @@ func (pr *UserRouter) InitUserRouter(Router *gin.RouterGroup) {
 	}
 	// private router
 	userRouterPrivate := Router.Group("/user")
+	userRouterPrivate.Use(middleware.AuthenMiddleware())
 	// userRouterPrivate.Use(limiter())
 	// userRouterPrivate.Use(Authen())
 	// userRouterPrivate.Use(Permission())
 	{
 		userRouterPrivate.GET("/get_info")
+		userRouterPrivate.POST("/two-factor/setup", account.TwoFA.SetupTwoFactorAuth)
 	}
 }
